--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,10 @@ body {
   padding: 30px;
   margin: 30px;
   text-align: start;
+  justify-content: space-between;
 }
 .App {
   display: flex;
   text-align: center;
-  
+  justify-content: space-between;
 }
