--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 
 body {
-  padding: 30px;
-  margin: 30px;
+  padding: 10px;
+  margin: 20px;
   text-align: start;
-  justify-content: space-between;
+
 }
 .App {
   display: flex;
   text-align: center;
-  justify-content: space-between;
+  justify-content: start;
 }
